--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,16 @@
 annotated-types==0.7.0
 anyio==4.9.0
 beautifulsoup4==4.13.3
+certifi==2025.1.31
+charset-normalizer==3.4.1
 fastapi==0.115.11
 idna==3.10
 lxml==5.3.1
 pydantic==2.10.6
 pydantic_core==2.27.2
+requests==2.32.3
 sniffio==1.3.1
 soupsieve==2.6
 starlette==0.46.1
 typing_extensions==4.12.2
+urllib3==2.3.0
