--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,8 @@ click==8.1.8
 dnspython==2.7.0
 fastapi==0.115.11
 h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 idna==3.10
 iniconfig==2.1.0
 lazy-model==0.2.0
@@ -20,6 +22,7 @@ pydantic_core==2.27.2
 pymongo==4.11.3
 pytest==8.3.5
 python-dotenv==1.0.1
+python-multipart==0.0.20
 PyYAML==6.0.2
 requests==2.32.3
 sniffio==1.3.1
