--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/sortable": "^10.0.0",
     "@tailwindcss/postcss": "^4.0.14",
+    "axios": "^1.8.4",
     "js-cookie": "^3.0.5",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
