--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ beautifulsoup4==4.13.3
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
+coverage==7.7.1
 dnspython==2.7.0
 fastapi==0.115.11
 h11==0.14.0
@@ -21,6 +22,7 @@ pydantic==2.10.6
 pydantic_core==2.27.2
 pymongo==4.11.3
 pytest==8.3.5
+pytest-cov==6.0.0
 python-dotenv==1.0.1
 python-multipart==0.0.20
 PyYAML==6.0.2
