--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
     "reactjs-popup": "^2.0.6",
-    "tailwindcss": "^4.0.14"
+    "tailwindcss": "^4.0.14",
+    "use-debounce": "^10.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
