--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,13 @@
 annotated-types==0.7.0
 anyio==4.9.0
+astroid==3.3.9
 beanie==1.29.0
 beautifulsoup4==4.13.3
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
 coverage==7.7.1
+dill==0.3.9
 dnspython==2.7.0
 fastapi==0.115.11
 h11==0.14.0
@@ -13,13 +15,18 @@ httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
 iniconfig==2.1.0
+isort==6.0.1
+itsdangerous==2.2.0
 lazy-model==0.2.0
 lxml==5.3.1
+mccabe==0.7.0
 motor==3.7.0
 packaging==24.2
+platformdirs==4.3.7
 pluggy==1.5.0
 pydantic==2.10.6
 pydantic_core==2.27.2
+pylint==3.3.6
 pymongo==4.11.3
 pytest==8.3.5
 pytest-cov==6.0.0
@@ -31,6 +38,7 @@ sniffio==1.3.1
 soupsieve==2.6
 starlette==0.46.1
 toml==0.10.2
+tomlkit==0.13.2
 typing_extensions==4.12.2
 urllib3==2.3.0
 uvicorn==0.34.0
