--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ click==8.1.8
 coverage==7.7.1
 dill==0.3.9
 dnspython==2.7.0
+exceptiongroup==1.2.2
 fastapi==0.115.11
 h11==0.14.0
 httpcore==1.0.7
@@ -21,6 +22,7 @@ lazy-model==0.2.0
 lxml==5.3.1
 mccabe==0.7.0
 motor==3.7.0
+numpy==2.2.4
 packaging==24.2
 platformdirs==4.3.7
 pluggy==1.5.0
@@ -38,8 +40,8 @@ sniffio==1.3.1
 soupsieve==2.6
 starlette==0.46.1
 toml==0.10.2
+tomli==2.2.1
 tomlkit==0.13.2
 typing_extensions==4.12.2
 urllib3==2.3.0
 uvicorn==0.34.0
-itsdangerous>=2.0
