--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,12 +19,23 @@ jobs:
       with:
         node-version: lts/*
     
-    - name: Install dependencies
+    - name: Install frontend dependencies
       run: |
         cd frontend
         npm ci
         npx playwright install --with-deps
+
+    - name: Install backend dependencies
+      run: |
+        cd backend
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
     
+    - name: Start backend server
+      run: |
+        cd backend
+        python3 -m app.main &     # Start in background
+
     - name: Run Playwright tests
       run: |
         cd frontend
