--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -35,6 +35,10 @@ jobs:
       run: |
         cd backend
         python3 -m app.main &     # Start in background
+      
+    - name: Wait for backend to be ready
+      run: |
+        npx wait-on http://localhost:8000
 
     - name: Run Playwright tests
       run: |
