--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "globals": "^15.15.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.4"
+    "vite": "^6.2.4",
+    "wait-on": "^8.0.3"
   }
 }
