--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -28,6 +28,7 @@ platformdirs==4.3.7
 pluggy==1.5.0
 pydantic==2.10.6
 pydantic_core==2.27.2
+pyinstrument==5.0.1
 pylint==3.3.6
 pymongo==4.11.3
 pytest==8.3.5
