fix typo in frontend test env

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -52,7 +52,7 @@ jobs:
         SERVER_PORT: 8000
         FRONTEND_ADDR: 127.0.0.1
         FRONTEND_HOSTNAME: localhost
-        FRONTEND_POR: 5173
+        FRONTEND_PORT: 5173
 
     - name: Run Playwright tests
       run: |
