--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "@tailwindcss/postcss": "^4.0.14",
     "axios": "^1.8.4",
     "js-cookie": "^3.0.5",
+    "plotly.js": "^3.0.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.4.0",
     "reactjs-popup": "^2.0.6",
     "tailwindcss": "^4.0.14",
