--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "plotly.js": "^3.0.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.0.0",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.4.0",
